@@ -100,11 +100,11 @@ specifier|public
 specifier|static
 specifier|final
 name|String
-name|DMAP_SINGLE_CLASS_TEMPLATE
+name|SINGLE_CLASS_TEMPLATE
 init|=
 name|TEMPLATES_DIR_NAME
 operator|+
-literal|"client-datamap-singleclass.vm"
+literal|"client-singleclass.vm"
 decl_stmt|;
 specifier|public
 specifier|static
@@ -125,6 +125,16 @@ init|=
 name|TEMPLATES_DIR_NAME
 operator|+
 literal|"client-datamap-superclass.vm"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DMAP_SINGLE_CLASS_TEMPLATE
+init|=
+name|TEMPLATES_DIR_NAME
+operator|+
+literal|"client-datamap-singleclass.vm"
 decl_stmt|;
 specifier|public
 specifier|static
@@ -153,17 +163,19 @@ case|case
 name|ENTITY_SUBCLASS
 case|:
 return|return
-name|ClientClassGenerationAction
-operator|.
 name|SUBCLASS_TEMPLATE
 return|;
 case|case
 name|ENTITY_SUPERCLASS
 case|:
 return|return
-name|ClientClassGenerationAction
-operator|.
 name|SUPERCLASS_TEMPLATE
+return|;
+case|case
+name|ENTITY_SINGLE_CLASS
+case|:
+return|return
+name|SINGLE_CLASS_TEMPLATE
 return|;
 case|case
 name|EMBEDDABLE_SUBCLASS
@@ -176,6 +188,12 @@ name|EMBEDDABLE_SUPERCLASS
 case|:
 return|return
 name|EMBEDDABLE_SUPERCLASS_TEMPLATE
+return|;
+case|case
+name|EMBEDDABLE_SINGLE_CLASS
+case|:
+return|return
+name|EMBEDDABLE_SINGLE_CLASS_TEMPLATE
 return|;
 case|case
 name|DATAMAP_SUPERCLASS
@@ -192,6 +210,12 @@ return|return
 name|ClientClassGenerationAction
 operator|.
 name|DMAP_SUBCLASS_TEMPLATE
+return|;
+case|case
+name|DATAMAP_SINGLE_CLASS
+case|:
+return|return
+name|DMAP_SINGLE_CLASS_TEMPLATE
 return|;
 default|default:
 throw|throw
