@@ -36,13 +36,17 @@
 ${importUtils.setPackage($subPackageName)}##
 ${importUtils.addReservedType("${subPackageName}.${subClassName}")}##
 ${importUtils.addType("${basePackageName}.${baseClassName}")}##
-${importUtils.addType('java.util.List')}##
 ${importUtils.addType('org.apache.cayenne.ObjectContext')}##
+#if( ${object.hasSelectQueries()} )
+${importUtils.addType('java.util.List')}##
 ${importUtils.addType('org.apache.cayenne.query.MappedSelect')}##
 #foreach( $selectQuery in ${object.SelectQueries})
 ${importUtils.addType(${selectQuery.Root.ClassName})}##
+#if(${dataMapUtils.isValidParameterNames($selectQuery)})
 #foreach( $parameter in ${dataMapUtils.getParameterNames(${selectQuery})})
 ${importUtils.addType(${dataMapUtils.getParameterType(${selectQuery}, ${parameter})})}##
+#end##
+#end##
 #end##
 #end##
 #if($object.hasExecQueries())##
@@ -76,10 +80,10 @@ public class ${subClassName} {
         }
         return instance;
     }
-
 #foreach( $selectQuery in ${object.SelectQueries})
 #if(${dataMapUtils.isValidParameterNames($selectQuery)})
-    #set($rootClass = ${stringUtils.stripPackageName($selectQuery.Root.ClassName)})
+#set($rootClass = ${stringUtils.stripPackageName($selectQuery.Root.ClassName)})
+
     public List<$rootClass> perform${dataMapUtils.getQueryMethodName(${selectQuery})}(ObjectContext context#foreach( $parameter in ${dataMapUtils.getParameterNames(${selectQuery})}), ${stringUtils.stripPackageName(${dataMapUtils.getParameterType(${selectQuery}, ${parameter})})} ${parameter}#end) {
         MappedSelect<${rootClass}> query = MappedSelect.query(${stringUtils.capitalizedAsConstant(${selectQuery.Name})}_QUERYNAME, ${rootClass}.class);
 #foreach( $parameter in ${dataMapUtils.getParameterNames(${selectQuery})})
@@ -87,14 +91,14 @@ public class ${subClassName} {
 #end
         return query.select(context);
     }
-
 #end
 #end
 #foreach( $execQuery in ${object.ExecQueries})
+
     public QueryResult<?> perform${dataMapUtils.getQueryMethodName(${execQuery})}(ObjectContext context, Map<String, ?> parameters) {
         MappedExec query = MappedExec.query(${stringUtils.capitalizedAsConstant(${execQuery.Name})}_QUERYNAME).params(parameters);
         return query.execute(context);
     }
-
 #end
+
 }
