@@ -21,6 +21,7 @@ CAY-2312 Modeler: Undo does not work for checkboxes
 CAY-2318 Modeler: Query. Exception after Undo clicking
 CAY-2319 Modeler: Embeddable > Attributes. Undo does not cancel pasted objects
 CAY-2323 Modeler: Graph. No warning while saving the image with existing name
+CAY-2331 cgen: broken templates for data map
 
 ----------------------------------
 Release: 4.0.B1
